--- a/layout.css
+++ b/layout.css
@@ -1,3 +1,8 @@
+/* 
+- As minimal as it comes. Just the basics.
+- Vars used in following stylesheets such as header and footer
+*/
+
 :root {
     --background-default: #FFFCF7;
     --border:#F2DFC5;
@@ -19,6 +24,13 @@ body {
     color: var(--text-primary);
     margin:0;
     padding:0;
+    display:flex;
+    flex-direction: column;
+    min-height:100vh;
+}
+
+.main{
+    flex:1
 }
 
 a {
