--- a/style.css
+++ b/style.css
@@ -2,12 +2,7 @@
 /* Language handling */
 
 .lang-hide{
-    background:pink;
     display: none;
-}
-
-.lang-show{
-    color:blue;
 }
 
 
@@ -21,23 +16,57 @@
     display:none;
 }
 
-.invis{
-    width:100%;
-    display:block;
-    border:0;
-}
-
 /* NEW STUFF */
-
 
 .doilink{
     display:block
 }
 
-.img-container{
-    max-width: 400px;
+/* CARDS */
 
-    & img{
-        max-width: 100%;
+
+
+
+.card{
+    display: flex;
+    min-width: 240px;  
+    align-items: center;
+    border-radius: var(--radius-md);
+    border: 1px solid var(--border);
+    background: var(--white);
+    padding-right: var(--spacing-spacing-md);
+    font-style: normal;
+
+    & .text{
+        padding: var(--spacing-spacing-md) ;
+        display: flex;
+        flex-direction: column;
+
+        & .title{
+            font-size: var(--font-size-7);        
+            font-weight: 700;
+            line-height: 120%; /* 28.8px */
+        }
+
+        & .subtitle{
+            color: var(--text-base-text-secondary);
+            font-size: var(--font-size-3, 14px);
+            font-weight: 400;
+            line-height: 160%; /* 22.4px */
+        }
     }
+
+    &:hover{
+        border-color: var(--border-hover);
+        box-shadow: inset 0 0 0 4px var(--border-hover);
+        
+    }
+
+    &:active{
+        background-color: var(--surface-secondary);
+    }
+    
 }
+
+
+
