downloadlink is now button

--- a/header.css
+++ b/header.css
@@ -30,6 +30,7 @@ Requires variables from layout stylesheet
       & a{
         color:var(--text-primary);
         border:0;
+        padding:0;
       }  
       
       &  .header-elements{
