--- a/layout.css
+++ b/layout.css
@@ -23,6 +23,9 @@
   --text-base-text-secondary:#616B6D;
   --border-hover:#004557;
 
+  --primary-color:#005A71;
+  --primary-color-hover:#004557;
+
   /*sizes*/
   
   --half-size:4px;
@@ -39,6 +42,7 @@
 
   --max-width:1216px; /* check this one, looks weird */ 
   --radius-md:8px;
+  --button-border-radius: 30px;
 
   /*fonts*/
   --font-default-family:"Chivo", sans-serif;
@@ -46,6 +50,13 @@
   --font-size-6:1.25rem;
   --font-size-5:1.125rem;
   --font-size-3:.875rem;  
+
+  /*Buttons*/
+  --padding-horisontal: 22px;
+  --padding-vertical: 14px;
+  --button-border-width: 2px;
+  --icon-button-size:40px;
+
 }
 
 *,::after, ::before {
@@ -155,7 +166,6 @@ a {
 
 }
 
-
 .top-section{
   background:#fff1db;
   width:100vw;
@@ -188,4 +198,57 @@ a {
   display:flex;
   gap:var(--spacing-spacing-md);
   flex-wrap:wrap;
+}
+
+button{
+  padding: var(--padding-vertical) var(--padding-horisontal);
+  border-radius: var(--button-border-radius);
+  border-width: var(--button-border-width);
+  border-style: solid;
+  box-sizing: border-box;
+  margin-left: 0;
+  width: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /*secondary aka. default*/
+  background:var(--white);
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+  text-decoration: none;
+
+  &:hover,
+  &:active {
+    cursor:pointer;
+    border: 4px solid var(--primary-color);
+    padding: calc(var(--padding-vertical) - 2px) calc(var(--padding-horisontal) - 2px);
+  }
+
+  /* primary for main action on page */
+  &.primary {
+    background: var(--primary-color);
+    border-color: var(--primary-color);
+    color: var(--white);
+    &:hover,
+    &:active {
+        border-color: var(--primary-color-hover);
+        background: var(--primary-color-hover);        
+    }
+  } 
+
+  &.icon-button{
+    width: var(--icon-button-size);
+    height: var(--icon-button-size);
+    border-radius: 50%;
+    padding: 0;
+    margin: 0;
+    min-width: var(--icon-button-size);
+    min-height: var(--icon-button-size);
+
+    &:hover {
+        padding: 0;
+    }
+  }
+
 }
