--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 .card{
     display: flex;
-    min-width: 240px;  
+    min-width: 240px;
     align-items: center;
     border-radius: var(--radius-md);
     border: 1px solid var(--border);
@@ -30,7 +30,7 @@
         flex-direction: column;
 
         & .title{
-            font-size: var(--font-size-7);        
+            font-size: var(--font-size-7);
             font-weight: 700;
             line-height: 120%; /* 28.8px */
         }
@@ -46,13 +46,13 @@
     &:hover{
         border-color: var(--border-hover);
         box-shadow: inset 0 0 0 4px var(--border-hover);
-        
+
     }
 
     &:active{
         background-color: var(--surface-secondary);
     }
-    
+
 }
 
 .contributor-list{
@@ -60,7 +60,7 @@
     flex-direction: column;
     gap:4px;
     padding-left:0;
-    
+
 
     & li{
         display: flex;
@@ -93,4 +93,8 @@ dl div{
     border-radius: 4px;
     margin:4px;
     border: 2px solid var(--text-base-text-secondary);
+
+    & .add-space{
+      padding-left: 4px
+    }
 }
