correct links + change new search to card

--- a/layout.css
+++ b/layout.css
@@ -353,4 +353,13 @@ hr{
       background-color: var(--surface-secondary);
   }
 
+  &.small{
+    max-width: max-content;
+  }
+
+  & a{
+    max-width: max-content;
+
+  }
+
 }
