updated to new progressbar

--- a/layout.css
+++ b/layout.css
@@ -22,7 +22,8 @@
   --surface-brand-4b:#F8AE00;
   --text-base-text-secondary:#616B6D;
   --border-hover:#004557;
-
+  --evergreen-60: #16A979;
+  --grey: #dadada;
   --primary-color:#005A71;
   --primary-color-hover:#004557;
 
